Ver 0.0.4:
Made utils class internal
Cleaned up __init__.py
Ver 0.0.3:
Small bug fixes
Ver 0.0.2:
Changed udp sequncing
Ver 0.0.1:
First ever version of the networking module
Basic server and client tcp udp implementation
Can split udp into seperate messages and reconstruct them