@@ -1,19 +1,19 @@
 import netpywork as networking
 
-def server_receive(msg,proto):
+def server_receive(msg,proto,self:networking.server):
     if(proto == networking.protocol.UDP):
         msg: networking.udp_msg = msg
         print("Server UDP:",msg.length,msg.data,msg.address)
     if(proto == networking.protocol.TCP):
         msg: networking.tcp_msg = msg
         print("Server TCP:",msg.length,msg.data,msg.address)
-def server_connect(address):
+def server_connect(address,self: networking.server):
     print(f"Client with ip {address} connected")
-def server_disconnect(address):
+def server_disconnect(address,self: networking.server):
     print(f"Client with ip {address} disconnected")
-def client_connected(address):
+def client_connected(address,self: networking.client):
     print(f"Client conncted to {address}")
-def client_receive(msg,proto):
+def client_receive(msg,proto,self: networking.client):
     if(proto == networking.protocol.UDP):
         msg: networking.udp_msg = msg
         print("Client UDP:",msg.length,msg.data,msg.address)
@@ -25,7 +25,6 @@ def main():
     server.on_receive = server_receive
     server.on_connect = server_connect
     server.on_disconnect = server_disconnect
-    
     client = networking.client('localhost',12345)
     client.on_connect = client_connected
     client.on_receive = client_receive
@@ -35,6 +34,8 @@ def main():
     
     client.send_reliable("Hello :)".encode())
     client.send_unreliable(("Hello!!!").encode())
+    client.send_unreliable(("Hello!!!222").encode())
+    client.send_unreliable(("Hello!!!333").encode())
     server.send_reliable("Hi1".encode(),client.address)
     server.send_unreliable("Hi2".encode(),client.address)
 
